--- a/view/login.html
+++ b/view/login.html
@@ -4,9 +4,9 @@
             <div class="welcome-container">
                 <div class="welcome-big">Welcome</div>
                 <div class="welcome-small">to</div>
-                <div class="welcome-logo">
+<!--                <div class="welcome-logo">
                     <img src="img/new/logo.svg">
-                </div>
+                </div>-->
             </div>
             <form class="login-form" ng-submit="login()" role="form" name="loginForm" novalidate="">
                 <div class="input-container">
