--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,9 @@ input:-webkit-autofill {
     width: 142px;
     float: right;
 }
+.welcome-logo img{
+    width: 100%;
+}
 
 .login-form {
     width: 80%;
