--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,18 @@ input:-webkit-autofill {
 .keyboard-open #login .scroll{
     height: calc(100% + 200px);
 }
+.keyboard-open #login .login-footer{
+    clear: both;
+    position: static;    
+}
+.keyboard-open #login .pane{
+    overflow: visible;
+}
 #login .scroll {
-    height: 100%;
+    height: 100% !important;
+    max-height: 100%;
+    min-height: 100%;
+
 }
 
 #login ion-content.scroll-content.ionic-scroll {
@@ -103,7 +113,6 @@ input:-webkit-autofill {
     margin-bottom: 2px;
     position: relative;
     border-radius: 0px !important;
-    background-color:crimson !important;
 }
 
 .input-container .label-bar:before {
