--- a/css/main.css
+++ b/css/main.css
@@ -20,13 +20,13 @@
 
 .keyboard-open .login-container {
     padding-top: 20px;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .login-container {
     background-image: url("../img/new/image.jpg");
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     min-height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
