--- a/view/menu.html
+++ b/view/menu.html
@@ -1,15 +1,5 @@
 <ion-side-menus cache-view="false" drag-content="false" class="custom-menu">
     <ion-side-menu-content>
-<!--        <ion-header-bar class="bar-calm">
-            <div class="buttons">
-                <button class="button icon button-clear ion-navicon"
-                        ng-click="toggleLeft($event)"></button>
-            </div>
-            <h1 class="title">{{navTitle}}</h1>
-        </ion-header-bar>-->
-
-
-
         <ion-header-bar class="bar bar-header bar-calm">
             <button class="button button-icon icon ion-navicon" ng-click="toggleLeft($event)"></button>
             <div class="h1 title">{{navTitle}}</div>
@@ -39,6 +29,16 @@
                 <img src="img/new/synchronize.svg">
                 <span>Synchronize</span>
             </ion-item>
+            <ion-item nav-clear menu-close ng-click="sync_local()" class="dark-bg dark-border menu-item p-10-15"
+                      style="color:#fff">
+                <img src="img/new/synchronize.svg">
+                <span>Local Synchronize</span>
+            </ion-item>
+            <ion-item nav-clear menu-close ng-click="sync_force()" class="dark-bg dark-border menu-item p-10-15"
+                      style="color:#fff">
+                <img src="img/new/synchronize.svg">
+                <span>Force Synchronize</span>
+            </ion-item>
             <ion-item nav-clear menu-close ui-sref="app.myaccount" class="dark-bg dark-border menu-item p-10-15"
                       style="color:#fff">
                 <img src="img/new/user.svg">
@@ -63,4 +63,3 @@
     </ion-side-menu>
 
 </ion-side-menus>
-
