--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
 
 .login-container {
     background-image: url("../img/new/image.jpg");
+    background-color: #07101E;
     width: 100%;
     height: 100%;
     min-height: 100%;
